--- a/public/phpmetrics/index.html
+++ b/public/phpmetrics/index.html
@@ -49,15 +49,15 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 20:45:55        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 22:57:18        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
             <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="label"><a href="violations.html">Violations</a> (0                    criticals, 1 errors)
+                <div class="label"><a href="violations.html">Violations</a> (0                    criticals, 2 errors)
                 </div>
-                <div class="number">9</div>
+                <div class="number">12</div>
                 <div class="bloc-action">
                     <a href="violations.html">View details &gt;</a>
                 </div>
@@ -65,11 +65,11 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <span title="Last value: 1084" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+                <span title="Last value: 1084" class="progress progress-neutral progress-gt">+284 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>                <div class="label"><a href="loc.html">Lines of code</a></div>
-                <div class="number">1,084</div>
+                <div class="number">1,368</div>
                 <div class="bloc-action">
                     <a href="loc.html">View details &gt;</a>
                 </div>
@@ -77,11 +77,11 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <span title="Last value: 18" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+                <span title="Last value: 18" class="progress progress-neutral progress-gt">+1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>                <div class="label"><a href="oop.html">Classes</a></div>
-                <div class="number">18</div>
+                <div class="number">19</div>
                 <div class="bloc-action">
                     <a href="loc.html">View details &gt;</a>
                 </div>
@@ -93,11 +93,11 @@
     <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                <span title="Last value: 5.33" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+                <span title="Last value: 5.33" class="progress progress-bad progress-gt">+1.78 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>                <div class="label"><a href="complexity.html">Average cyclomatic complexity by class</a></div>
-                <div class="number">5.33</div>
+                <div class="number">7.11</div>
                 <div class="bloc-action">
                     <a href="complexity.html">View details &gt;</a>
                 </div>
@@ -121,12 +121,12 @@
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <span title="Last value: 0.18" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+                <span title="Last value: 0.18" class="progress progress-bad progress-gt">+0.05 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span>                <div class="label"><a href="complexity.html">Average bugs by class</a></div>
                 <div class="number">
-                    0.18                </div>
+                    0.23                </div>
                 <div class="bloc-action">
                     <a href="complexity.html">View details &gt;</a>
                 </div>
@@ -189,7 +189,7 @@
                             <tbody id="contentClassRank" class="clusterize-content">
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.23);">0.26</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.26);">0.28</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Card\Card</span>
@@ -199,7 +199,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.18);">0.21</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.18);">0.2</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Dice\Dice</span>
@@ -209,7 +209,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.03);">0.06</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.04);">0.06</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Repository\BookRepository</span>
@@ -219,7 +219,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.02);">0.05</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.03);">0.05</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Card\DeckOfCards</span>
@@ -229,17 +229,17 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.01);">0.04</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.03);">0.05</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Card\CardHand</span>
-                                        <span class="badge" title="Maintainability Index">78.28</span>
-                                        <span class="badge" title="Maintainability Index (w/o comments)">46.99</span>
+                                        <span class="badge" title="Maintainability Index">74.32</span>
+                                        <span class="badge" title="Maintainability Index (w/o comments)">44.76</span>
                                     </td>
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.01);">0.04</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.02);">0.04</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Entity\Book</span>
@@ -249,27 +249,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.01);">0.04</span>
-                                    </td>
-                                    <td>
-                                        <span class="path">App\Dice\DiceGraphic</span>
-                                        <span class="badge" title="Maintainability Index">95.7</span>
-                                        <span class="badge" title="Maintainability Index (w/o comments)">64.62</span>
-                                    </td>
-                                </tr>
-                                                            <tr>
-                                    <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
-                                    </td>
-                                    <td>
-                                        <span class="path">App\Form\BookType</span>
-                                        <span class="badge" title="Maintainability Index">65.98</span>
-                                        <span class="badge" title="Maintainability Index (w/o comments)">65.98</span>
-                                    </td>
-                                </tr>
-                                                            <tr>
-                                    <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.01);">0.03</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Dice\DiceHand</span>
@@ -279,7 +259,27 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0.01);">0.03</span>
+                                    </td>
+                                    <td>
+                                        <span class="path">App\Dice\DiceGraphic</span>
+                                        <span class="badge" title="Maintainability Index">95.7</span>
+                                        <span class="badge" title="Maintainability Index (w/o comments)">64.62</span>
+                                    </td>
+                                </tr>
+                                                            <tr>
+                                    <td>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
+                                    </td>
+                                    <td>
+                                        <span class="path">App\Form\BookType</span>
+                                        <span class="badge" title="Maintainability Index">65.98</span>
+                                        <span class="badge" title="Maintainability Index (w/o comments)">65.98</span>
+                                    </td>
+                                </tr>
+                                                            <tr>
+                                    <td>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Controller\CardGameController</span>
@@ -289,7 +289,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Controller\JsonController</span>
@@ -299,7 +299,17 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
+                                    </td>
+                                    <td>
+                                        <span class="path">App\Controller\ProjController</span>
+                                        <span class="badge" title="Maintainability Index">51.99</span>
+                                        <span class="badge" title="Maintainability Index (w/o comments)">18.88</span>
+                                    </td>
+                                </tr>
+                                                            <tr>
+                                    <td>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Controller\BookController</span>
@@ -309,7 +319,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Controller\Game21Controller</span>
@@ -319,7 +329,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Controller\CardGameApiController</span>
@@ -329,7 +339,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Controller\DiceGameController</span>
@@ -339,7 +349,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Controller\LibraryController</span>
@@ -349,7 +359,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Controller\MainController</span>
@@ -359,7 +369,7 @@
                                 </tr>
                                                             <tr>
                                     <td>
-                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.03</span>
+                                        <span class="badge"  style="background-color: hsla(203, 82%, 76%, 0);">0.02</span>
                                     </td>
                                     <td>
                                         <span class="path">App\Kernel</span>
@@ -441,7 +451,7 @@
                             <path d="M0 0h24v24H0z" fill="none">
                             <path d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20V8zm-6 8h-4v-2h4v2zm0-4h-4v-2h4v2z">
                         </svg>
-                        Violations (9)
+                        Violations (12)
                     </a>
                 </li>
                                     <li>
