--- a/public/phpmetrics/panel.html
+++ b/public/phpmetrics/panel.html
@@ -49,16 +49,16 @@
 <div class="page">
     <div class="content content-first">
         <div class="report-details">
-            Created at 2023-11-24 20:45:55        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
+            Created at 2023-11-24 22:57:18        , with PHPMetrics v2.8.2 (<a href="https://twitter.com/Halleck45">Jean-François Lépine</a>).
         </div>
 
         
     <div class="row">
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="number">1084</div>
-                <div class="label">lines of code <span title="Last value: 1084" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+                <div class="number">1368</div>
+                <div class="label">lines of code <span title="Last value: 1084" class="progress progress-neutral progress-gt">+284 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
@@ -66,11 +66,11 @@
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="number">
-                    18                    <small> (100                        %)
+                    19                    <small> (100                        %)
                     </small>
                 </div>
-                <div class="label">classes <span title="Last value: 18" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+                <div class="label">classes <span title="Last value: 18" class="progress progress-neutral progress-gt">+1 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
@@ -95,13 +95,13 @@
         <div class="column">
             <div class="bloc bloc-number">
                 <div
-                    class="number">4</div>
+                    class="number">5</div>
                 <div class="label">methods by class</div>
             </div>
         </div>
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="number">48</div>
+                <div class="number">58</div>
                 <div class="label">logical lines of code by class</div>
             </div>
         </div>
@@ -109,7 +109,7 @@
 
         <div class="column">
             <div class="bloc bloc-number">
-                <div class="number">11</div>
+                <div class="number">13</div>
                 <div class="label">logical lines of code by method</div>
             </div>
         </div>
@@ -117,9 +117,9 @@
         <div class="column">
             <div class="bloc bloc-number">
                 <div
-                    class="number">1.5</div>
-                <div class="label">average LCOM <span title="Last value: 1.5" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+                    class="number">1.47</div>
+                <div class="label">average LCOM <span title="Last value: 1.5" class="progress progress-good progress-lt">-0.03 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 18l2.29-2.29-4.88-4.88-4 4L2 7.41 3.41 6l6 6 4-4 6.3 6.29L22 12v6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
@@ -142,13 +142,13 @@
                             <td>App\Card\Card                                                                <span class="badge" title="Maintainability Index">97.56</span>
                                 <span class="badge" title="Maintainability Index (w/o comments)">52.57</span>
                             </td>
-                            <td>0.26</td>
+                            <td>0.28</td>
                         </tr>
                                             <tr>
                             <td>App\Dice\Dice                                                                <span class="badge" title="Maintainability Index">59.66</span>
                                 <span class="badge" title="Maintainability Index (w/o comments)">59.66</span>
                             </td>
-                            <td>0.21</td>
+                            <td>0.2</td>
                         </tr>
                                             <tr>
                             <td>App\Repository\BookRepository                                                                <span class="badge" title="Maintainability Index">107.63</span>
@@ -163,10 +163,10 @@
                             <td>0.05</td>
                         </tr>
                                             <tr>
-                            <td>App\Card\CardHand                                                                <span class="badge" title="Maintainability Index">78.28</span>
-                                <span class="badge" title="Maintainability Index (w/o comments)">46.99</span>
+                            <td>App\Card\CardHand                                                                <span class="badge" title="Maintainability Index">74.32</span>
+                                <span class="badge" title="Maintainability Index (w/o comments)">44.76</span>
                             </td>
-                            <td>0.04</td>
+                            <td>0.05</td>
                         </tr>
                                             <tr>
                             <td>App\Entity\Book                                                                <span class="badge" title="Maintainability Index">76.01</span>
@@ -175,28 +175,28 @@
                             <td>0.04</td>
                         </tr>
                                             <tr>
-                            <td>App\Dice\DiceGraphic                                                                <span class="badge" title="Maintainability Index">95.7</span>
-                                <span class="badge" title="Maintainability Index (w/o comments)">64.62</span>
-                            </td>
-                            <td>0.04</td>
-                        </tr>
-                                            <tr>
-                            <td>App\Form\BookType                                                                <span class="badge" title="Maintainability Index">65.98</span>
-                                <span class="badge" title="Maintainability Index (w/o comments)">65.98</span>
-                            </td>
-                            <td>0.03</td>
-                        </tr>
-                                            <tr>
                             <td>App\Dice\DiceHand                                                                <span class="badge" title="Maintainability Index">82.75</span>
                                 <span class="badge" title="Maintainability Index (w/o comments)">53.2</span>
                             </td>
                             <td>0.03</td>
                         </tr>
                                             <tr>
+                            <td>App\Dice\DiceGraphic                                                                <span class="badge" title="Maintainability Index">95.7</span>
+                                <span class="badge" title="Maintainability Index (w/o comments)">64.62</span>
+                            </td>
+                            <td>0.03</td>
+                        </tr>
+                                            <tr>
+                            <td>App\Form\BookType                                                                <span class="badge" title="Maintainability Index">65.98</span>
+                                <span class="badge" title="Maintainability Index (w/o comments)">65.98</span>
+                            </td>
+                            <td>0.02</td>
+                        </tr>
+                                            <tr>
                             <td>App\Controller\CardGameController                                                                <span class="badge" title="Maintainability Index">66.8</span>
                                 <span class="badge" title="Maintainability Index (w/o comments)">34.74</span>
                             </td>
-                            <td>0.03</td>
+                            <td>0.02</td>
                         </tr>
                                         </tbody>
                 </table>
@@ -207,9 +207,9 @@
         <div class="column">
             <div class="bloc bloc-number">
                 <div class="number">
-                    5.33                </div>
-                <div class="label">Average cyclomatic complexity by class <span title="Last value: 5.33" class="progress progress-neutral progress-eq">0 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M22 12l-4-4v3H3v2h15v3z"/>
+                    7.11                </div>
+                <div class="label">Average cyclomatic complexity by class <span title="Last value: 5.33" class="progress progress-bad progress-gt">+1.78 <svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"/>
     <path d="M0 0h24v24H0z" fill="none"/>
 </svg></span></div>
             </div>
